Fixing styling issues with CarItem on mobile devices

--- a/src/Components/CarListItem/CarImg/CarImg.css
+++ b/src/Components/CarListItem/CarImg/CarImg.css
@@ -16,34 +16,30 @@
     height: 200px;
     font-size: 20px;
     padding-left: 20px;
-    cursor: pointer;
-    transition: all .4s;
-}
-
-.CarType:hover {
-    background-color: rgba(24, 40, 214, 0.15);
-    transition: all .4s;
 }
 
 .CarImg {
     border: 1px #0b1259 solid;
-    width: 10%;
+    width: 15%;
     height: auto;
     padding: 5px;
     background: #fff;
 }
 
 .CarInfo {
-    width: 50%;
+    width: 55%;
+}
+
+@media screen and (max-width: 1200px) {
+    .CarInfo {
+        width: 45%;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
     .CarType {
         width: 100%;
-    }
-
-    .RentBtn {
-
     }
 }
 
@@ -53,18 +49,23 @@
     }
 
     .CarInfo {
-        margin-left: 1rem;
+        margin-left: 0;
         font-size: 16px;
+        width: 100%;
+
     }
 
     .CarType {
-        height: 200px;
+        height: 220px;
+        padding: 0 10px;
+        flex-direction: column;
+        justify-content: space-around;
     }
 }
 
 @media screen and (max-width: 450px) {
     .CarType {
-        height: 300px;
+        height: 250px;
     }
 }
 
