--- a/src/Components/CarListItem/CarRentButton/CarRentButton.css
+++ b/src/Components/CarListItem/CarRentButton/CarRentButton.css
@@ -30,3 +30,11 @@
     text-align: center;
     margin: 30px 10px;
 }
+
+@media screen and (max-width: 650px) {
+    .RentBtnReserved {
+        font-size: 16px;
+        width: 120px;
+
+    }
+}
